--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,8 +9,9 @@ project 'Runner', {
   'Release' => :release,
 }
 
-flutter_root = File.expand_path('..', __FILE__)
+flutter_root = File.expand_path('..', File.dirname(__FILE__))
 require File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper')
+
 
 flutter_ios_podfile_setup
 
