Fix Podfile Flutter root detection for Codemagic

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ require File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper')
 
 flutter_ios_podfile_setup
 
+use_modular_headers!
+
 target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
