--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,6 +9,9 @@ workflows:
       flutter: stable
       xcode: latest
       cocoapods: default
+      vars:
+        APP_STORE_ID: your_app_store_id
+        BUNDLE_ID: com.padelcore.app
     scripts:
       - name: Get Flutter dependencies
         script: |
@@ -26,11 +29,36 @@ workflows:
           cd ios
           pod install
           cd ..
-      - name: Build iOS IPA
+      - name: Build iOS IPA (Release)
         script: |
           flutter build ipa --release
     artifacts:
       - build/ios/ipa/*.ipa
+    publishing:
+      email:
+        recipients:
+          - mhanytalaat@icloud.com
+        notify:
+          success: true
+          failure: true
+  
+  android-workflow:
+    name: Android Workflow
+    max_build_duration: 120
+    instance_type: mac_mini_m1
+    environment:
+      groups:
+        - keystore_credentials
+      flutter: stable
+    scripts:
+      - name: Get Flutter dependencies
+        script: |
+          flutter pub get
+      - name: Build Android App Bundle (Release)
+        script: |
+          flutter build appbundle --release
+    artifacts:
+      - build/app/outputs/bundle/release/*.aab
     publishing:
       email:
         recipients:
