--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,15 +4,9 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m1
     environment:
-      groups:
-        - app_store_credentials
       flutter: stable
       xcode: latest
       cocoapods: default
-      # Apple Developer API key (optional - can use groups instead)
-      # app_store_connect:
-      #   key_id: 8HRJ2UHKD3
-      #   issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
       vars:
         APP_STORE_ID: your_app_store_id
         BUNDLE_ID: com.padelcore.app
@@ -39,6 +33,13 @@ workflows:
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
+      app_store_connect:
+        # App Store Connect API key for automatic certificate management
+        # This will automatically fetch and use certificates during build
+        api_key: Encrypted\ API\ Key\ File  # Upload your .p8 file in Codemagic Settings → Code signing → App Store Connect API keys
+        key_id: 8HRJ2UHKD3
+        issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
+        submit_to_testflight: true
       email:
         recipients:
           - mhanytalaat@icloud.com
