--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,14 +7,6 @@ workflows:
       flutter: stable
       xcode: latest
       cocoapods: default
-      # Configure code signing to use App Store Connect API key
-      # This will automatically fetch and use certificates during build
-      app_store_connect:
-        key_id: 8HRJ2UHKD3
-        issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
-        # After uploading .p8 file in Codemagic Settings, reference it here
-        # Common reference names: "APP_STORE_CONNECT_API_KEY" or "Encrypted API Key File"
-        api_key: Encrypted\ API\ Key\ File
       vars:
         APP_STORE_ID: your_app_store_id
         BUNDLE_ID: com.padelcore.app
@@ -42,7 +34,10 @@ workflows:
       - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
-        # Use the same API key configuration for publishing
+        # App Store Connect API key for automatic certificate management
+        # Upload your .p8 file in Codemagic Settings → Code signing → App Store Connect API keys
+        # Then reference it here (replace with actual reference name from Codemagic)
+        api_key: Encrypted\ API\ Key\ File
         key_id: 8HRJ2UHKD3
         issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
         submit_to_testflight: true
