--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,10 +35,10 @@ workflows:
     publishing:
       app_store_connect:
         # App Store Connect API key for automatic certificate management
-        # Codemagic will auto-detect the API key if it was used to fetch certificates
-        # If you need to upload .p8 file: Settings → Global variables and secrets → Add variable
+        # Upload .p8 file as encrypted variable: Settings → Environment variables → Add variable
         # Name: APP_STORE_CONNECT_API_KEY, Type: File, Upload .p8 file
-        # Then reference it as: api_key: $APP_STORE_CONNECT_API_KEY
+        # Then reference it here:
+        api_key: $APP_STORE_CONNECT_API_KEY
         key_id: 8HRJ2UHKD3
         issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
         submit_to_testflight: true
