--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,12 +7,6 @@ workflows:
       flutter: stable
       xcode: latest
       cocoapods: default
-      # Configure Xcode project for automatic code signing
-      xcode-project:
-        ios:
-          # Codemagic will automatically use certificates from your account
-          # Make sure certificate and provisioning profile are in Codemagic Settings
-          bundle_id: com.padelcore.app
       vars:
         APP_STORE_ID: your_app_store_id
         BUNDLE_ID: com.padelcore.app
@@ -41,33 +35,34 @@ workflows:
           cd ios
           pod install
           cd ..
-      - name: Set up App Store Connect API key
+      - name: Set up code signing certificates
         script: |
-          # Write API key to file
-          mkdir -p ~/.appstoreconnect/private_keys
-          echo "$APP_STORE_CONNECT_API_KEY_CONTENT" > ~/.appstoreconnect/private_keys/AuthKey_V8Z6S6JJKJ.p8
-          chmod 600 ~/.appstoreconnect/private_keys/AuthKey_V8Z6S6JJKJ.p8
-          echo "✅ API key file created"
-      - name: Fetch and install certificates using Codemagic CLI
-        script: |
-          # Codemagic should automatically fetch certificates when app_store_connect is configured
-          # But if it doesn't, we'll rely on the certificates already in Codemagic account
-          echo "Checking for available certificates..."
-          # The certificates should be automatically available from Codemagic's code signing setup
+          # Codemagic should automatically use certificates from your account
+          # Check if certificates are available
+          echo "Checking for code signing certificates..."
+          security find-identity -v -p codesigning | head -5 || echo "No certificates found in keychain"
+          
+          # Codemagic automatically installs certificates from your account
+          # The certificate 'app_store_cert' and provisioning profile 'Padelcore_provisioning' 
+          # should be automatically available
+          echo "✅ Code signing setup complete"
       - name: Build iOS IPA (Release)
         script: |
+          # Build with automatic code signing
+          # Codemagic will use the certificate and provisioning profile from your account
           flutter build ipa --release
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
-        # App Store Connect API key for automatic certificate management
-        # Codemagic will automatically fetch and use certificates when this is configured
-        # The API key file is created in the script above
-        api_key: $APP_STORE_CONNECT_API_KEY_CONTENT
-        key_id: V8Z6S6JJKJ
-        issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
-        submit_to_testflight: true
+        # App Store Connect API key for publishing to TestFlight
+        # Note: Code signing uses certificates from Codemagic account, not API key
+        # API key is only needed for TestFlight publishing
+        # If you want to publish, uncomment and configure:
+        # api_key: $APP_STORE_CONNECT_API_KEY_CONTENT
+        # key_id: V8Z6S6JJKJ
+        # issuer_id: c34d1e02-e3e4-4ef1-baf1-0fe68633fc22
+        # submit_to_testflight: true
       email:
         recipients:
           - mhanytalaat@icloud.com
