--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: padel_booking
 description: A padel booking app
 publish_to: "none"
 
-version: 1.0.8+16
+version: 1.1.1+21
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^4.3.0
   cloud_firestore: ^6.1.1
   firebase_auth: ^6.1.3
+  firebase_messaging: ^16.1.0
   google_sign_in: ^6.2.1
   url_launcher: ^6.2.5
   fl_chart: ^0.68.0
