--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,12 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    - assets/images/logo.png
+    - assets/images/icon.png
+    - assets/images/padel_court.jpg
+    - assets/images/padel_courtn.jpg
+    - assets/images/E&Series_logo.png
+    - assets/images/tpf.png
 
 flutter_launcher_icons:
   android: true
