--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   sign_in_with_apple: ^6.1.3
   url_launcher: ^6.2.5
   fl_chart: ^0.68.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
