--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/logo.png
-    - assets/images/icon.png
-    - assets/images/padel_court.jpg
-    - assets/images/padel_courtn.jpg
-    - assets/images/E&Series_logo.png
-    - assets/images/tpf.png
+    - assets/images/
 
 flutter_launcher_icons:
   android: true
