--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: padel_booking
 description: A padel booking app
 publish_to: "none"
 
-version: 1.1.8+38
+version: 1.1.10+40
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -20,6 +20,8 @@ dependencies:
   url_launcher: ^6.2.5
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  image_picker: ^1.0.7
+  firebase_storage: ^13.0.5
 
 dev_dependencies:
   flutter_test:
