--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.0.7
   firebase_storage: ^13.0.5
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
