--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,10 @@
   "storage": {
     "rules": "storage.rules"
   },
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs18"
+  },
   "flutter": {
     "platforms": {
       "android": {
