--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: padel_booking
 description: A padel booking app
 publish_to: "none"
 
-version: 1.1.19+49
+version: 1.1.21+51
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^13.0.5
   http: ^1.2.0
+  flutter_local_notifications: ^17.2.3
 
 dev_dependencies:
   flutter_test:
