Fix tournament title wrapping + regenerate larger launcher icons
UI Fixes:
- App header: Allow tournament titles to wrap to 2 lines
- Reduce title font from 16px to 14px for better wrapping
- Fix long tournament names like 'The Padel Factory Weekly Tournament' being cut off

Launcher Icon Improvements:
- Switch from icon.png to logo_app.png (less padding, more visible)
- Add Android adaptive icon support with dark blue background
- Regenerate all launcher icons (Android + iOS)
- Icons now appear larger and more visible on home screen

Security:
- Update .gitignore to exclude service account credentials and temp files

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,21 @@ app.*.map.json
 
 # Chat history backups (optional - remove this line if you want to track backups in git)
 /backups/
+
+# Security - NEVER commit credentials
+functions/service-account-key.json
+**/service-account-key.json
+*.json.key
+*credentials*.json
+
+# Temporary/cache files
+functions/.npm-cache/
+extracted_chat_history.txt
+chat_files_found.csv
+
+# Documentation files (too many, keep only essentials)
+*_FIX.md
+*_SETUP.md
+*_GUIDE.md
+*_TROUBLESHOOTING.md
+TESTFLIGHT_*.md
