--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/icon.png"
+  image_path: "assets/images/logo_app.png"
   min_sdk_android: 21
   remove_alpha_ios: true
+  # Make Android adaptive icon fill more space
+  adaptive_icon_background: "#0A0E27"  # Dark blue background
+  adaptive_icon_foreground: "assets/images/logo_app.png"
