--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: padel_booking
 description: A padel booking app
 publish_to: "none"
 
-version: 1.1.29+60
+version: 1.1.30+61
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -24,6 +24,9 @@ dependencies:
   firebase_storage: ^13.0.5
   http: ^1.2.0
   flutter_local_notifications: ^17.2.3
+  flutter_svg: ^2.0.9
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.4
 
 dev_dependencies:
   flutter_test:
