--- a/firebase.json
+++ b/firebase.json
@@ -1,32 +1,1 @@
-{
-  "firestore": {
-    "rules": "firestore.rules"
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "functions": {
-    "source": "functions",
-    "runtime": "nodejs20"
-  },
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "padelcore-app",
-          "appId": "1:1087756281644:android:bcc84a435d4151eb53ae89",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "padelcore-app",
-          "configurations": {
-            "android": "1:1087756281644:android:bcc84a435d4151eb53ae89",
-            "web": "1:1087756281644:web:11b4082aac7fa3ad53ae89"
-          }
-        }
-      }
-    }
-  }
-}
+{"firestore":{"rules":"firestore.rules"},"storage":{"rules":"storage.rules"},"functions":{"source":"functions","runtime":"nodejs20"},"flutter":{"platforms":{"android":{"default":{"projectId":"padelcore-app","appId":"1:1087756281644:android:eabe2f91dc35560f53ae89","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"padelcore-app","configurations":{"android":"1:1087756281644:android:eabe2f91dc35560f53ae89","ios":"1:1087756281644:ios:ab581a1a0a90a43053ae89","macos":"1:1087756281644:ios:4ade3cd94baf500c53ae89","web":"1:1087756281644:web:11b4082aac7fa3ad53ae89","windows":"1:1087756281644:web:318f0743f8ee249953ae89"}}}}}}
